--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-var url = 'mongodb://Bigghead:fdas886asml@ds133438.mlab.com:33438/voting-polls';
+url = 'mongodb://Bighead:fdas886@ds133438.mlab.com:33438/voting-polls'
