--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^2.0.0",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
+    "express-sanitizer": "^1.0.1",
     "express-session": "^1.14.2",
     "mongoose": "^4.6.8",
     "passport": "^0.3.2",
