--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.14.0",
     "express-sanitizer": "^1.0.1",
     "express-session": "^1.14.2",
+    "foreman": "^2.0.0",
     "mongoose": "^4.6.8",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
